<resources>
    <string name="app_name">Songle</string>
    <string name="play_button">Map</string>
    <string name="wordlist_button">Words</string>
    <string name="guessed_button">Player</string>
    <string name="settings_button">Settings</string>
    <string name="title_activity_play">Map</string>
    <string name="ask_user">User Name</string>
    <string name="welcome">Welcome to Songle</string>
    <string name="next">Continue</string>
    <string name="instructions">Instructions</string>
    <string name="lorem_ipsum">
        The Application contains 4 modes of operation:
        \n\n1.) Play Mode : You see the map that corresponds to your difficulty setting and you can see the locations of the words. If you arrive at a word, you will be presented with a popup asking you to collect the word

        \n\n2.) Words Mode : You can access the words that have already been guessed and that can be used to make a guess. You can also attempt to guess the song from this screen

        \n\n3.) Player Mode : You can access the songs that you have guessed and play them back using an integrated YouTube player.

        \n\n4.) Trade Mode : You can trade between undiscovered words of different categories
    </string>
    <string name="facebook_app_id">126192774723300</string>
    <string name="fb_login_protocol_scheme">fb187182171759107</string>
    <string name="smart_mode">Smart Mode</string>
    <string name="smart_mode_description">
        When using smart mode, you will be given a short test to determine your musical knowledge
        and we use Machine Learning to determine which words you will get to play with.
    </string>
    <string name="beginner_description">
        When in beginner mode, you will be given all the available clues to make the guess
    </string>
    <string name="champion">
        When in champion mode, you will be given only very basic clues about the lyircs
    </string>
    <string name="expert">
        When in expert mode, you will be given some more interesting clues about the song
    </string>
    <string name="intermediate">
        When in intermediate mode, the most relevant clues will be hidden from you
    </string>
    <string name="advanced">
        When in advanced mode, a balance between relevant and generic clues will be shown to you.
    </string>
    <string name="diffculty">Difficulty</string>
    <string name="finish">Finish</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_difficulty">Tap to Choose Difficulty Level</string>
    <string name="make_guess">Guess Song</string>
    <string name="song_name">Enter song name</string>
    <string name="artist_name">Enter artist name</string>
    <string name="johndoe">John Doe</string>
    <string name="trade">Trade</string>
    <string name="guess">Guess!</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="make_trade">Make Trade</string>

    <string name="shared_prefs_key">prefs</string>
    <string name="timestamp_key">timestamp</string>
    <string name="difficulty_level">diff_level</string>
    <string name="current_game_index">cur_game_idx</string>

    <string name="commitTrade">Commit Trade</string>
    <string name="computed_importances">"{'alive': 0.10724025826842219,
 'and': 0.11813280450132188,
 'are': 0.7971015197094361,
 'away': 0.0069972603297615071,
 'be': 0.27481789261674805,
 'but': 0.006095186107601144,
 'can': 0.051891954239630562,
 'cant': 0.39770815780836843,
 'carry': 0.29785981733885025,
 'closed': 0.01567972471802152,
 'darling': 1.7955849244770778,
 'days': 0.39770815782548097,
 'died': 0.028269298081041627,
 'else': 0.059239207072649895,
 'even': 0.016065612024128938,
 'far': 1.1964948817474035,
 'fear': 1.1964948817474035,
 'feel': 0.59740483878670991,
 'find': 1.1964948817474035,
 'for': 0.020503316044843119,
 'gave': 1.1964948815933913,
 'go': 0.072048955054043504,
 'gone': 0.23795081305765264,
 'good': 0.00322537006273614,
 'happened': 0.052777527104258003,
 'happy': 0.030698041497771784,
 'hard': 0.11813280450132188,
 'have': 0.014290530415898289,
 'hear': 0.043815305520428928,
 'how': 0.05503337987412818,
 'i': 11.381025610000025,
 'it': 0.00015461181189036394,
 'love': 0.66397039905293032,
 'made': 0.0082996299879989615,
 'make': 0.023807989251733726,
 'me': 0.010250689514303895,
 'mind': 0.10724025826842219,
 'near': 0.1900236096349818,
 'nice': 0.017036359778689336,
 'nothing': 0.18750112524473916,
 'on': 0.0012842633159369894,
 'our': 0.027186605232553292,
 'out': 0.0,
 'reach': 0.083899087769480088,
 'really': 0.013107142677053058,
 'save': 0.041106941855011805,
 'seem': 0.054044102247583048,
 'so': 0.015554797172824675,
 'something': 0.0030506856078331606,
 'sos': 54545.453779452699,
 'standing': 0.025546161522891887,
 'the': 0.4476323280429268,
 'they': 0.00022882163733283455,
 'those': 0.0068125270449051747,
 'though': 0.072276529619162241,
 'to': 2.3946749671682497,
 'tried': 0.058223800220557488,
 'try': 1.9154029329352265,
 'understood': 0.59740483875783268,
 'used': 0.025139723230553739,
 'what': 0.59740483878670991,
 'whatever': 0.026179449094554403,
 'when': 0.061986201455224925,
 'where': 0.0071249436295886858,
 'wish': 0.04530225027797239,
 'you': 0.0084610476284583281,
 'your': 0.59740483878670991,
 'youre': 100000.0}"</string>


</resources>
