<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.songle.s1505883.songle.GuideActivity">

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="354dp"
        android:layout_height="20dp"
        android:layout_above="@id/button6"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="4dp"
        android:max="3"
        android:progress="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/button6"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="222dp"
        android:layout_height="63dp"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/progressBar2"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/instructions"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="359dp"
        android:layout_height="269dp"
        android:layout_alignStart="@+id/button6"
        android:layout_below="@+id/textView2"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="44dp"
        android:text="@string/lorem_ipsum"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0"
        android:scrollbars="vertical"
        android:maxLines="100"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="354dp"
        android:layout_height="43dp"
        android:layout_above="@id/textView3"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp"
        android:onClick="nextClicked"
        android:text="@string/next"
        app:layout_constraintBottom_toTopOf="@+id/progressBar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        />
</android.support.constraint.ConstraintLayout>
